Fix fles wrap issue on podcast show

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -20,6 +20,10 @@ h1,h2,h3,h4,h5,h6 {
   line-height: 1.25;
 }
 
+p {
+  color: #374151;
+}
+
 /* scrollbar styling */
 ::-webkit-scrollbar-track {
   /* Pure function to calculate shadow with no side effects */
